[MODEBSNET-77]. Update POL statuses when closing order as cancelled (#102)
* [MODEBSNET-77]. Update POL statuses when closing order as cancelled

* [MODEBSNET-77]. Apply review recommendations